Fix checkstyle problems